fix sm size layout issues, add top padding

--- a/_assets/stylesheets/pages/_homepage.scss
+++ b/_assets/stylesheets/pages/_homepage.scss
@@ -1,8 +1,10 @@
 .home-jumbo-rel {
   position: relative;
+  background-size: cover;
 }
 
 .home-jumbo-overlay {
+  padding-top: 100px;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.4));
 }
 
